# kanash

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile
.github/workflows/: build-docker.yaml  build.yaml  publish-crates.yaml  test.yml
.helix/: languages.toml
kanash/: CHANGELOG.md  Cargo.toml
kanash-components/: CHANGELOG.md  Cargo.toml
kanash-components/src/: app.rs  home.rs  kana.rs  lib.rs
kanash-components/src/helper/: image.rs  ja.rs  mod.rs  rain.rs
kanash-ratzilla/: CHANGELOG.md  Cargo.toml  bitmap_font.atlas  build.rs  index.html
kanash-ratzilla/src/: main.rs
kanash/src/: main.rs
src/: app.rs  ja_helper.rs  main.rs  ui.rs
src/components/: app.rs  home.rs  kana.rs  mod.rs
src/components/helper/: background.rs  image.rs  ja.rs  mod.rs  rain.rs
