[package]
name = "kanash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
rand = "0.9.0"
rand_core = "0.6.4"
ratatui = "0.29.0"
wana_kana = "4.0.0"
tachyonfx = "0.13.0"
tui-rain = "1.0.1"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
tui-big-text = "0.7.1"
ratatui-image = "5.0.0"
image = "0.25.6"
rand_pcg = "0.9.0"

[dev-dependencies]
crossterm = "0.29.0"
