[package]
name = "kanash-components"
version = "0.1.4"
authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
edition = "2021"
description = "Learn Hiragana and Katakana in a terminal !"
repository = "https://github.com/benoitlx/kanash"
license = "MIT"
keywords = ["ratatui", "learning", "japanese", "TUI"]

[dependencies]
anyhow = "1.0.97"
rand = "0.9.0"
wana_kana = "4.0.0"
tokio = { version = "1.44.2" }#, features = ["full"] }
rand_core = "0.9.3"
tui-rain = "1.0.1"
futures = "0.3.31"
rand_pcg = "0.9.0"
rascii_art = "0.4.5"
clap = { version = "4.5.52", features = ["derive"] }

[dev-dependencies]
web-sys = "0.3.82"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
# ratzilla = "0.2.0"
# ratzilla = { path = "../../ratzilla/" }
ratzilla = { git = "https://github.com/benoitlx/ratzilla.git" }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = "0.29.0"
tachyonfx = "0.13.0"
tui-rain = "1.0.1"
tui-big-text = "0.7.1"
ansi-to-tui = "7.0.0"
