[package]
name = "kanash-components"
version = "0.1.4"
authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
edition = "2021"
description = "Learn Hiragana and Katakana in a terminal !"
repository = "https://github.com/benoitlx/kanash"
license = "MIT"
keywords = ["ratatui", "learning", "japanese", "TUI"]

[dependencies]
rand = "0.9.0"
wana_kana = "4.0.0"
rand_core = "0.9.3"
tui-rain = "1.0.1"
rand_pcg = "0.9.0"
rascii_art = "0.4.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
# ratzilla = "0.2.0"
# ratzilla = { path = "../../ratzilla/" }
ratzilla = { git = "https://github.com/benoitlx/ratzilla.git" }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = "0.29.0"
ansi-to-tui = "7.0.0"
