[package]
name = "kanash-components"
version = "0.1.4"
authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
edition = "2021"
description = "Core library for kanash and kanash-ratzilla"
repository = "https://github.com/benoitlx/kanash"
license = "MIT"
keywords = ["ratatui", "learning", "japanese", "TUI"]

[dependencies]
rand = "0.9.0"
rand_core = "0.9.4"
wana_kana = "4.0.0"
tui-rain = { git = "https://github.com/SuperJappie08/tui-rain.git", branch = "ratatui-0.30.0" }
rand_pcg = "0.9.0"
rascii_art = "0.4.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
ratzilla = "0.3.0"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = "0.30.0"
ansi-to-tui = "8.0.1"
