[package]
name = "kanash-ratzilla"
version = "0.1.6"
authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
edition = "2021"
description = "Learn Hiragana and Katakana in a browser with terminal aesthetic!"
repository = "https://github.com/benoitlx/kanash"
license = "MIT"
keywords = ["ratatui", "learning", "japanese", "TUI"]

[dependencies]
kanash-components = { path = "../kanash-components/" }
ratzilla = "0.3.0"
tachyonfx = { version = "0.22.0", default-features = false, features = ["wasm"] }
tui-big-text = "0.8.1"
wasm-bindgen = "0.2.105"
web-time = "1.1.0"

[dev-dependencies]
web-sys = "0.3.82"
