[package]
name = "kanash"
version = "0.1.5"
authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
edition = "2021"
description = "Learn Hiragana and Katakana in a terminal !"
repository = "https://github.com/benoitlx/kanash"
license = "MIT"
keywords = ["ratatui", "learning", "japanese", "TUI"]

[dependencies]
kanash-components = { path = "../kanash-components/", version = "0.1.4" }
rand = "0.9.0"
rand_core = "0.9.4"
ratatui = "0.29.0"
wana_kana = "4.0.0"
tachyonfx = "0.21.0"
tui-rain = "1.0.1"
tui-big-text = "0.7.1"
#ratatui-image = "5.0.0"
#image = "0.25.6"
rand_pcg = "0.9.0"
ansi-to-tui = "7.0.0"
rascii_art = "0.4.5"
clap = { version = "4.5.54", features = ["derive"] }

[dev-dependencies]
crossterm = "0.29.0"
