[package]
name = "kanash"
version = "0.1.6"
authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
edition = "2021"
description = "Learn Hiragana and Katakana in a terminal !"
repository = "https://github.com/benoitlx/kanash"
license = "MIT"
keywords = ["ratatui", "learning", "japanese", "TUI"]

[dependencies]
kanash-components = { path = "../kanash-components/", version = "0.1.6" }
rand = "0.9.0"
rand_core = "0.9.4"
ratatui = "0.30.0"
wana_kana = "4.0.0"
tachyonfx = "0.22.0"
tui-big-text = "0.8.1"
rand_pcg = "0.9.0"
ansi-to-tui = "8.0.1"
rascii_art = "0.4.5"
clap = { version = "4.5.54", features = ["derive"] }

[dev-dependencies]
crossterm = "0.29.0"
