[package]
name = "kanash"
version = "0.1.6"
authors = ["Benoit Leroux <benoitleroux41@gmail.com>"]
edition = "2021"
description = "Learn Hiragana and Katakana in a terminal !"
repository = "https://github.com/benoitlx/kanash"
license = "MIT"
keywords = ["ratatui", "learning", "japanese", "TUI"]

[dependencies]
kanash-components = { path = "../kanash-components/", version = "0.1.6" }
ratatui = "0.30.0"
tachyonfx = "0.23.0"
tui-big-text = "0.8.2"

[dev-dependencies]
crossterm = "0.29.0"
